[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datawords"
description = 'A library to work with text data'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Xavier Petit", email = "nuxion@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	"Unidecode~=1.3.2",
	"langdetect~=1.0.9",
	"python-Levenshtein~=0.12.2",
	"emoji~=1.5.0",
	"gensim~=4.1.2",
	"nltk~=3.6.4",
	"scikit-learn~=1.0",
	"spacy~=3.1.3",
	"pytextrank~=3.2.1",
	"scikit-network~=0.24.0",
	"langcodes[data]~=3.2.1",
	"annoy~=1.17.0",
	"pydantic>=1.7.4,!=1.8,!=1.8.1,<1.11.0"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/datawords#readme"
Issues = "https://github.com/unknown/datawords/issues"
Source = "https://github.com/unknown/datawords"

[tool.hatch.version]
path = "datawords/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pip-tools",
  "ipython",
  "isort",
  "pylint>2.6.0", # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#id4
  "black~=22.10.0",
  "black-macchiato", # for partial update of buffers in emacs
  "types-requests",
  "types-redis",
  "types-ujson",
  "types-dateparser",
  "types-pytz",
  "types-emoji",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=datawords --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "datawords/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[tool.isort]
profile = "black"


